bootstrap section done

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="">Contact</a>
+                  <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="">Pricing</a>
+                  <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="">Download</a>
+                  <a class="nav-link" href="cta">Download</a>
               </li>
           </ul>
         </div>
@@ -177,8 +177,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -186,9 +186,13 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <div class="social-icons">
+      <i class="social fab fa-twitter"></i>
+      <i class="social fab fa-facebook-f"></i>
+      <i class="social fab fa-instagram"></i>
+      <i class="social fas fa-envelope"></i>
+    </div>
     <p>© Copyright 2018 TinDog</p>
-
   </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
